Color changes in UI

--- a/src/components/navbar_footer.css
+++ b/src/components/navbar_footer.css
@@ -1,6 +1,6 @@
 .bar-main {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(41, 41, 65);
+    background-color: #303053;
     width: auto;
     color: white;
     border-radius: 10px;
