--- a/src/pages/aboutme_page.css
+++ b/src/pages/aboutme_page.css
@@ -36,7 +36,7 @@
     padding-inline-start: 50px;
     padding-inline-end: 50px;
     border-style: outset;
-    background-color: #18181d;
+    background-color: #303053;
     border-color: rgb(59, 59, 59);
 }
 
@@ -66,7 +66,7 @@
     margin-top: 40px;
     max-width: 1080px;
     border-style: outset;
-    background-color: #18181d;
+    background-color: #303053;
     border-color: rgb(59, 59, 59);
     
 }
