--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -44,7 +44,7 @@
     max-width: 1080px;
     padding: 20px;
     border-style: outset;
-    background-color: #18181d;
+    background-color: #303053;
     border-color: rgb(59, 59, 59);
 }
 
@@ -56,6 +56,7 @@
 .secondary-headline {
     margin-top: 20px;
     margin-bottom: 20px;
+    
 }
 
 .border-lines-1080 {
@@ -68,6 +69,7 @@
     padding-bottom: 20px;
     border-style: outset;
     border-color: rgba(0, 0, 0, 0.096);
+    
 }
 
 .image-slider {
